Fix path error on deleteJSONFile method